scss/all_components

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,13 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Condensed:wght@100;200;600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Noto+Sans&display=swap");
-
-/* Font family */
-$font-family-dosis: "Dosis", sans-serif;
-$font-family-noto: "Noto Sans", sans-serif;
-$font-family-encode: "Encode Sans Semi Condensed", sans-serif;
+//Variables 
+// Color System 
 
 
-/* Color palette */
 $color-primary: #55c57a;
 $color-primary-light: #7ed567;
 $color-primary-dark: #28b485;
@@ -24,3 +18,9 @@ $color-grey-light-2: #eee;
 
 $color-white: #fff;
 $color-black: #000;
+
+
+
+
+
+
