--- a/scss/blonder-utilities.scss
+++ b/scss/blonder-utilities.scss
@@ -3,11 +3,18 @@
  * Copyright 2021- The Blonder Authors
  * Copyright 2021- , Inc.
  * Licensed under MIT (https://github.com/acquahsamuel/blonder/blob/main/LICENSE)
-*/
+ */
 
 
+// Configuration
 @import "functions";
 @import "variables";
 @import "mixins";
-@import "reboot";
+@import "utilities";
+
+// Helpers
+@import "helpers";
+
+// Utilities
+@import "utilities/api";
 
