--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,20 +1,3 @@
-//Margin  utilities
-.mar-1 {
-    margin: 1rem;
-}
-
-.mar-sm {
-    margin: 1rem;
-}
-
-.mar-md {
-    margin: 1rem;
-}
-
-.mar-lg {
-    margin: 1rem;
-}
-
 // Margin top *SM utilities
 .mt-sm {
     margin-top: 0.5rem;
@@ -95,31 +78,44 @@
 
 // Padding right  utilities
 .pr-sm {
-    margin-bottom: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 .pr-md {
-    margin-bottom: 1rem;
+    padding-right: 1rem;
 }
 
 .pr-lg {
-    margin-bottom: 1.5rem;
+    padding-right: 1.5rem;
 }
 
 // Padding left  utilities
 .pl-sm {
-    margin-bottom: 0.5rem;
+    padding-left: 0.5rem;
 }
 
 .pl-md {
-    margin-bottom: 1rem;
+    padding-left: 1rem;
 }
 
 .pl-lg {
-    margin-bottom: 1.5rem;
+    padding-left: 1.5rem;
 }
 
-// Padding around (par)
+//Margin around utilities
+.mar-sm {
+    margin: 0.5rem;
+}
+
+.mar-md {
+    margin: 1rem;
+}
+
+.mar-lg {
+    margin: 1.5rem;
+}
+
+// Padding around utilities (par)
 .par-sm {
     padding: 0.5rem;
 }
@@ -132,20 +128,113 @@
     padding: 1.5rem;
 }
 
-
 // Text Utilities
+//////////////////////////////////////////////
+.blue{
+    color : $blue;
+}
+
+.indigo{
+    color : $indigo;
+}
+
+.purple{
+    color : $purple;
+}
+
+.pink{
+    color : $pink;
+}
+
+.red{
+    color : $red;
+}
+
+.orange {
+    color : $orange;
+}
+
+/////////////////////////////////////////
+
+
 .text-white {
-    color: $color-white;
+    color: $white;
 }
 
 .text-black {
-    color: $color-black;
+    color: $black;
 }
 
-.border-black{
-    border: 1px solid $color-black
+
+.text-indigo {
+ color : $indigo;   
 }
 
-.rounded{
+.text-green {
+    color : $green;
+}
+
+.text-ceter {
+    text-align: center;
+}
+
+.border-black {
+    border: 1px solid $black;
+}
+
+.rounded {
     border-radius: 5px;
+}
+
+
+
+
+// Shadow utitlites 
+.shadow-sm-1 {
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+.shadow-sm-2 {
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.shadow-sm-3 {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.shadow-sm-4 {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.shadow-md-1 {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.shadow-md-2 {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+.shadow-md-3 {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.shadow-md-4 {
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+
+.shadow-lg-1 {
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px,
+        rgba(17, 17, 26, 0.1) 0px 24px 80px;
+}
+
+.shadow-lg-2 {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+}
+
+.shadow-lg-3 {
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
+}
+
+.shadow-lg-4 {
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
 }
