--- a/scss/blonder-grid.scss
+++ b/scss/blonder-grid.scss
@@ -5,17 +5,61 @@
  * Licensed under MIT (https://github.com/acquahsamuel/blonder/blob/main/LICENSE)
  */
 
- 
+//Borrowed grid system from bootstrap 
 @import "functions";
 @import "variables";
 
 
-@import "mixins/grid";
+@import "mixins/lists";
 @import "mixins/breakpoints";
-@import "mixins/grid-framework";
+@import "mixins/container";
+@import "mixins/grid";
+@import "mixins/utilities";
 
 
+@import "containers";
 @import "grid";
-@import "utilities/flex";
-// @import "utilities/breakpoints";
-// @import "utlities/breakpoints";
+
+
+@import "utilities";
+// Only use the utilities we need
+// stylelint-disable-next-line scss/dollar-variable-default
+$utilities: map-get-multiple(
+  $utilities,
+  (
+    "display",
+    "order",
+    "flex",
+    "flex-direction",
+    "flex-grow",
+    "flex-shrink",
+    "flex-wrap",
+    "justify-content",
+    "align-items",
+    "align-content",
+    "align-self",
+    "margin",
+    "margin-x",
+    "margin-y",
+    "margin-top",
+    "margin-end",
+    "margin-bottom",
+    "margin-start",
+    "negative-margin",
+    "negative-margin-x",
+    "negative-margin-y",
+    "negative-margin-top",
+    "negative-margin-end",
+    "negative-margin-bottom",
+    "negative-margin-start",
+    "padding",
+    "padding-x",
+    "padding-y",
+    "padding-top",
+    "padding-end",
+    "padding-bottom",
+    "padding-start",
+  )
+);
+
+@import "utilities/api";
